--- a/Makefile.in
+++ b/Makefile.in
@@ -158,8 +158,8 @@ sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 confdir = $(sysconfdir)
-conf_DATA = ytalkrc
-man_MANS = docs/ytalk.1
+conf_DATA = snacktalkrc
+man_MANS = docs/snacktalk.1
 EXTRA_DIST = config.rpath mkinstalldirs ChangeLog README INSTALL $(man_MANS) $(conf_DATA)
 SUBDIRS = docs src test
 all: config.h
