--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -75,7 +75,7 @@ CFLAGS = @CFLAGS@
 CPP = @CPP@
 CPPFLAGS = @CPPFLAGS@
 CYGPATH_W = @CYGPATH_W@
-DEFS = @DEFS@ @SYSTEM_DEFS@ -DYTALK_TEST
+DEFS = @DEFS@ @SYSTEM_DEFS@ -DSNACKTALK_TEST
 DEPDIR = @DEPDIR@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
