--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -14,7 +14,7 @@
 
 @SET_MAKE@
 
-SOURCES = $(ytalk_SOURCES)
+SOURCES = $(snacktalk_SOURCES)
 
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
@@ -36,7 +36,7 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-bin_PROGRAMS = ytalk$(EXEEXT)
+bin_PROGRAMS = snacktalk$(EXEEXT)
 subdir = src
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
@@ -50,12 +50,12 @@ CONFIG_CLEAN_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
-am_ytalk_OBJECTS = main.$(OBJEXT) term.$(OBJEXT) user.$(OBJEXT) \
+am_snacktalk_OBJECTS = main.$(OBJEXT) term.$(OBJEXT) user.$(OBJEXT) \
 	fd.$(OBJEXT) comm.$(OBJEXT) menu.$(OBJEXT) socket.$(OBJEXT) \
 	rc.$(OBJEXT) exec.$(OBJEXT) getpty.$(OBJEXT) cwin.$(OBJEXT) \
 	mem.$(OBJEXT) vt100.$(OBJEXT) gtalk.$(OBJEXT)
-ytalk_OBJECTS = $(am_ytalk_OBJECTS)
-ytalk_LDADD = $(LDADD)
+snacktalk_OBJECTS = $(am_snacktalk_OBJECTS)
+snacktalk_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
 depcomp =
 am__depfiles_maybe =
@@ -63,8 +63,8 @@ COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
 LINK = $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDFLAGS) -o $@
-SOURCES = $(ytalk_SOURCES)
-DIST_SOURCES = $(ytalk_SOURCES)
+SOURCES = $(snacktalk_SOURCES)
+DIST_SOURCES = $(snacktalk_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -140,7 +140,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-ytalk_SOURCES = \
+snacktalk_SOURCES = \
 	main.c \
 	term.c \
 	user.c \
@@ -219,9 +219,9 @@ uninstall-binPROGRAMS:
 
 clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
-ytalk$(EXEEXT): $(ytalk_OBJECTS) $(ytalk_DEPENDENCIES) 
-	@rm -f ytalk$(EXEEXT)
-	$(LINK) $(ytalk_LDFLAGS) $(ytalk_OBJECTS) $(ytalk_LDADD) $(LIBS)
+snacktalk$(EXEEXT): $(snacktalk_OBJECTS) $(snacktalk_DEPENDENCIES) 
+	@rm -f snacktalk$(EXEEXT)
+	$(LINK) $(snacktalk_LDFLAGS) $(snacktalk_OBJECTS) $(snacktalk_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
