--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -9,4 +9,4 @@ TESTS = sanity ptyalloc
 INCLUDES = -I..
 LIBS = @LIBS@
 
-DEFS = @DEFS@ @SYSTEM_DEFS@ -DYTALK_TEST
+DEFS = @DEFS@ @SYSTEM_DEFS@ -DSNACKTALK_TEST
