--- a/config.h.in
+++ b/config.h.in
@@ -144,11 +144,14 @@
 /* Define as the return type of signal handlers (`int' or `void'). */
 #undef RETSIGTYPE
 
-/* The size of a `long', as computed by sizeof. */
+/* The size of `long', as computed by sizeof. */
 #undef SIZEOF_LONG
 
-/* The size of a `u_int', as computed by sizeof. */
+/* The size of `u_int', as computed by sizeof. */
 #undef SIZEOF_U_INT
+
+/* Define to 1 to enable debugging output. */
+#undef SNACKTALK_DEBUG
 
 /* Define to 1 if you have the ANSI C header files. */
 #undef STDC_HEADERS
@@ -162,13 +165,10 @@
 /* Version number of package */
 #undef VERSION
 
-/* Define to 1 to enable debugging output. */
-#undef SNACKTALK_DEBUG
-
 /* Define to `int' if <sys/types.h> doesn't define. */
 #undef gid_t
 
-/* Define to `unsigned' if <sys/types.h> does not define. */
+/* Define to `unsigned int' if <sys/types.h> does not define. */
 #undef size_t
 
 /* the signed version of size_t */
